SWWEB-1153 fix lookup scrollbars

--- a/softWrench.sW4.Web/Content/styles/default/_grid.scss
+++ b/softWrench.sW4.Web/Content/styles/default/_grid.scss
@@ -94,8 +94,8 @@
                                 }
 
                                 .filter-options {
-                                    max-height: 310px;
-                                    overflow-y: scroll;
+                                    max-height: 306px;
+                                    overflow-y: auto;
                                 }
 
                                 ul {
